--- a/css/components/container.css
+++ b/css/components/container.css
@@ -4,8 +4,21 @@
   align-items: center;
   justify-items: space-between;
   padding-bottom: 30px;
+  width: 1500px;
 }
 
 .container h2 {
   margin: 30px auto;
+}
+
+@media(max-width: 900px) {
+  .container {
+    width: 500px;
+  }
+}
+
+@media(max-width: 500px) {
+  .container {
+    width: 300px;
+  }
 }
